<resources>
    <string name="app_name">Calculator</string>
    <string name="calculator_title">Calculator</string>
    <string name="input_display">Inputs and result will be shown here</string>
    <string name="clear_all">CE</string>
    <string name="clear">C</string>
    <string name="percent">%</string>
    <string name="divide">/</string>
    <string name="n7">7</string>
    <string name="n8">8</string>
    <string name="n9">9</string>
    <string name="multiply">x</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="subtract">-</string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="add">+</string>
    <string name="plus_minus">+/-</string>
    <string name="n0">0</string>
    <string name="decimal_point">.</string>
    <string name="equal">=</string>
</resources>