<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView
        android:id="@+id/calculator_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/calculator_title"
        android:textSize="30sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/input_display"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:gravity="end"
        android:background="@drawable/border"
        android:text="@string/input_display"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="100">
        <TableRow>
            <Button
                android:id="@+id/clear_all_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:padding="20dp"
                android:layout_margin="3dp"
                android:backgroundTint="@color/purple_700"
                android:text="@string/clear_all"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/clear_button"
                android:layout_width="3dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="25"
                android:backgroundTint="@color/purple_700"
                android:padding="20dp"
                android:text="@string/clear"
                android:textSize="20sp" />
            <Button
                android:id="@+id/percent_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:padding="20dp"
                android:layout_margin="3dp"
                android:backgroundTint="@color/purple_700"
                android:text="@string/percent"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/divide_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:padding="20dp"
                android:layout_margin="3dp"
                android:backgroundTint="@color/purple_700"
                android:text="@string/divide"
                android:textSize="20sp"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/n7_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:padding="20dp"
                android:layout_margin="3dp"
                android:backgroundTint="@color/purple_500"
                android:text="@string/n7"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/n8_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:padding="20dp"
                android:layout_margin="3dp"
                android:backgroundTint="@color/purple_500"
                android:text="@string/n8"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/n9_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:padding="20dp"
                android:layout_margin="3dp"
                android:backgroundTint="@color/purple_500"
                android:text="@string/n9"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/multiply_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:padding="20dp"
                android:layout_margin="3dp"
                android:backgroundTint="@color/purple_700"
                android:text="@string/multiply"
                android:textSize="20sp"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/n4_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:padding="20dp"
                android:layout_margin="3dp"
                android:backgroundTint="@color/purple_500"
                android:text="@string/n4"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/n5_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:padding="20dp"
                android:layout_margin="3dp"
                android:backgroundTint="@color/purple_500"
                android:text="@string/n5"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/n6_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:padding="20dp"
                android:layout_margin="3dp"
                android:backgroundTint="@color/purple_500"
                android:text="@string/n6"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/subtract_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:padding="20dp"
                android:layout_margin="3dp"
                android:backgroundTint="@color/purple_700"
                android:text="@string/subtract"
                android:textSize="20sp"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/n1_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:padding="20dp"
                android:layout_margin="3dp"
                android:backgroundTint="@color/purple_500"
                android:text="@string/n1"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/n2_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:padding="20dp"
                android:layout_margin="3dp"
                android:backgroundTint="@color/purple_500"
                android:text="@string/n2"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/n3_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:padding="20dp"
                android:layout_margin="3dp"
                android:backgroundTint="@color/purple_500"
                android:text="@string/n3"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/add_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:padding="20dp"
                android:layout_margin="3dp"
                android:backgroundTint="@color/purple_700"
                android:text="@string/add"
                android:textSize="20sp"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/plus_minus_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:padding="20dp"
                android:layout_margin="3dp"
                android:backgroundTint="@color/purple_500"
                android:text="@string/plus_minus"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/n0_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:padding="20dp"
                android:layout_margin="3dp"
                android:backgroundTint="@color/purple_500"
                android:text="@string/n0"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/decimal_point_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:padding="20dp"
                android:layout_margin="3dp"
                android:backgroundTint="@color/purple_500"
                android:text="@string/decimal_point"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/equal_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:padding="20dp"
                android:layout_margin="3dp"
                android:backgroundTint="@color/teal_700"
                android:text="@string/equal"
                android:textSize="20sp"/>
        </TableRow>
    </TableLayout>

</LinearLayout>
